Styles for gallery listings navigation

--- a/stylesheets/shared/modules/content/_gallery.scss
+++ b/stylesheets/shared/modules/content/_gallery.scss
@@ -4,6 +4,18 @@
 .filler {
 	height: 0;
 }
+.gallery-listings-header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	.listings-filters {
+		margin: 10px 0;
+	}
+	.page-links-container {
+		margin: 10px 0;
+	}
+}
 .grid-caption {
 	overflow: hidden;
 	font: {
