--- a/stylesheets/cms/_forms.scss
+++ b/stylesheets/cms/_forms.scss
@@ -39,7 +39,7 @@ input[type="number"] {
 	.line-items-container {
 		padding-bottom: 8px;
 		border: $header-border;
-		border-radius: 6px, 6px;
+		border-radius: 6px;
 		header {
 			background-color: $header-background-color;
 			padding: 8px 8px 2px 8px;
@@ -48,7 +48,7 @@ input[type="number"] {
 		h4 {
 			padding: 0 0 2px 0;
 			margin: 0;
-			text-shadow: 1px, 1px, 0, 0, white;
+			text-shadow: 1px 1px 0 0 white;
 		}
 		form {
 			padding: 8px 0;
