Fix border-radius css syntax errors

--- a/stylesheets/cms/_metadata.scss
+++ b/stylesheets/cms/_metadata.scss
@@ -32,7 +32,7 @@ ul.meta-list {
 	background: $metadata-background-color;
 	padding: 6px;
 	border: $metadata-border;
-	border-radius: 6px 6px;
+	border-radius: 6px;
 	textarea {
 		width: 540px;
 	}
