--- a/stylesheets/base/_layout.scss
+++ b/stylesheets/base/_layout.scss
@@ -20,7 +20,7 @@
 	color: $text-color;
 	background-color: $background-color;
 	border: 1px solid $border-color;
-	border-radius: 4px, 4px;
+	border-radius: 4px;
 	padding: 6px 10px;
 	margin-bottom: 12px;
 }
