Add breadcrumb font size configuration

--- a/stylesheets/base/_all.scss
+++ b/stylesheets/base/_all.scss
@@ -1,5 +1,6 @@
-@import "content";
-@import "layout";
-@import "listings";
-@import "lists";
-@import "widgets";
+@import 'config';
+@import 'content';
+@import 'layout';
+@import 'listings';
+@import 'lists';
+@import 'widgets';
