Move global variables from base/config to globals/variables

--- a/stylesheets/base/_all.scss
+++ b/stylesheets/base/_all.scss
@@ -1,6 +1,6 @@
-@import 'config';
 @import 'content';
 @import 'layout';
 @import 'listings';
 @import 'lists';
+@import 'mixins';
 @import 'widgets';
